[package]
name = "geoping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
surge-ping = "0.8.0"
serde = "1.0.164"
serde_json = "1.0.96"
ipinfo = "2.1.0"
